Emacs - Stop using custom elisp indentation function
Better to stay compatible with default.  Previous issue was alignment of
keywords.  Since I am switching away from use-package, there is no longer an
issue there.  For something like this:

'(:foo 1
       :bar 2)

You can now at least do this:
'( :foo 1
   :bar 2)

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -7623,81 +7623,81 @@ Builtin indentation should be better...
 #+begin_src emacs-lisp
 ;; https://emacs.stackexchange.com/questions/10230/how-to-indent-keywords-aligned
 ;; https://github.com/Fuco1/.emacs.d/blob/af82072196564fa57726bdbabf97f1d35c43b7f7/site-lisp/redef.el#L20-L94
-(defun fuco1/lisp-indent-function (indent-point state)
-  "This function is the normal value of the variable `lisp-indent-function'.
-The function `calculate-lisp-indent' calls this to determine
-if the arguments of a Lisp function call should be indented specially.
+;; (defun fuco1/lisp-indent-function (indent-point state)
+;;   "This function is the normal value of the variable `lisp-indent-function'.
+;; The function `calculate-lisp-indent' calls this to determine
+;; if the arguments of a Lisp function call should be indented specially.
 
-INDENT-POINT is the position at which the line being indented begins.
-Point is located at the point to indent under (for default indentation);
-STATE is the `parse-partial-sexp' state for that position.
+;; INDENT-POINT is the position at which the line being indented begins.
+;; Point is located at the point to indent under (for default indentation);
+;; STATE is the `parse-partial-sexp' state for that position.
 
-If the current line is in a call to a Lisp function that has a non-nil
-property `lisp-indent-function' (or the deprecated `lisp-indent-hook'),
-it specifies how to indent.  The property value can be:
+;; If the current line is in a call to a Lisp function that has a non-nil
+;; property `lisp-indent-function' (or the deprecated `lisp-indent-hook'),
+;; it specifies how to indent.  The property value can be:
 
-- `defun', meaning indent `defun'-style
-  \(this is also the case if there is no property and the function
-  has a name that begins with \"def\", and three or more arguments);
+;; - `defun', meaning indent `defun'-style
+;;   \(this is also the case if there is no property and the function
+;;   has a name that begins with \"def\", and three or more arguments);
 
-- an integer N, meaning indent the first N arguments specially
-  (like ordinary function arguments), and then indent any further
-  arguments like a body;
+;; - an integer N, meaning indent the first N arguments specially
+;;   (like ordinary function arguments), and then indent any further
+;;   arguments like a body;
 
-- a function to call that returns the indentation (or nil).
-  `lisp-indent-function' calls this function with the same two arguments
-  that it itself received.
+;; - a function to call that returns the indentation (or nil).
+;;   `lisp-indent-function' calls this function with the same two arguments
+;;   that it itself received.
 
-This function returns either the indentation to use, or nil if the
-Lisp function does not specify a special indentation."
-  (let ((normal-indent (current-column))
-        (orig-point (point)))
-    (goto-char (1+ (elt state 1)))
-    (parse-partial-sexp (point) calculate-lisp-indent-last-sexp 0 t)
-    (cond
-     ;; car of form doesn't seem to be a symbol, or is a keyword
-     ((and (elt state 2)
-           (or (not (looking-at "\\sw\\|\\s_"))
-               (looking-at ":")))
-      (if (not (> (save-excursion (forward-line 1) (point))
-                  calculate-lisp-indent-last-sexp))
-          (progn (goto-char calculate-lisp-indent-last-sexp)
-                 (beginning-of-line)
-                 (parse-partial-sexp (point)
-                                     calculate-lisp-indent-last-sexp 0 t)))
-      ;; Indent under the list or under the first sexp on the same
-      ;; line as calculate-lisp-indent-last-sexp.  Note that first
-      ;; thing on that line has to be complete sexp since we are
-      ;; inside the innermost containing sexp.
-      (backward-prefix-chars)
-      (current-column))
-     ((and (save-excursion
-             (goto-char indent-point)
-             (skip-syntax-forward " ")
-             (not (looking-at ":")))
-           (save-excursion
-             (goto-char orig-point)
-             (looking-at ":")))
-      (save-excursion
-        (goto-char (+ 2 (elt state 1)))
-        (current-column)))
-     (t
-      (let ((function (buffer-substring (point)
-                                        (progn (forward-sexp 1) (point))))
-            method)
-        (setq method (or (function-get (intern-soft function)
-                                       'lisp-indent-function)
-                         (get (intern-soft function) 'lisp-indent-hook)))
-        (cond ((or (eq method 'defun)
-                   (and (null method)
-                        (> (length function) 3)
-                        (string-match "\\`def" function)))
-               (lisp-indent-defform state indent-point))
-              ((integerp method)
-               (lisp-indent-specform method state
-                                     indent-point normal-indent))
-              (method
-               (funcall method indent-point state))))))))
+;; This function returns either the indentation to use, or nil if the
+;; Lisp function does not specify a special indentation."
+;;   (let ((normal-indent (current-column))
+;;         (orig-point (point)))
+;;     (goto-char (1+ (elt state 1)))
+;;     (parse-partial-sexp (point) calculate-lisp-indent-last-sexp 0 t)
+;;     (cond
+;;      ;; car of form doesn't seem to be a symbol, or is a keyword
+;;      ((and (elt state 2)
+;;            (or (not (looking-at "\\sw\\|\\s_"))
+;;                (looking-at ":")))
+;;       (if (not (> (save-excursion (forward-line 1) (point))
+;;                   calculate-lisp-indent-last-sexp))
+;;           (progn (goto-char calculate-lisp-indent-last-sexp)
+;;                  (beginning-of-line)
+;;                  (parse-partial-sexp (point)
+;;                                      calculate-lisp-indent-last-sexp 0 t)))
+;;       ;; Indent under the list or under the first sexp on the same
+;;       ;; line as calculate-lisp-indent-last-sexp.  Note that first
+;;       ;; thing on that line has to be complete sexp since we are
+;;       ;; inside the innermost containing sexp.
+;;       (backward-prefix-chars)
+;;       (current-column))
+;;      ((and (save-excursion
+;;              (goto-char indent-point)
+;;              (skip-syntax-forward " ")
+;;              (not (looking-at ":")))
+;;            (save-excursion
+;;              (goto-char orig-point)
+;;              (looking-at ":")))
+;;       (save-excursion
+;;         (goto-char (+ 2 (elt state 1)))
+;;         (current-column)))
+;;      (t
+;;       (let ((function (buffer-substring (point)
+;;                                         (progn (forward-sexp 1) (point))))
+;;             method)
+;;         (setq method (or (function-get (intern-soft function)
+;;                                        'lisp-indent-function)
+;;                          (get (intern-soft function) 'lisp-indent-hook)))
+;;         (cond ((or (eq method 'defun)
+;;                    (and (null method)
+;;                         (> (length function) 3)
+;;                         (string-match "\\`def" function)))
+;;                (lisp-indent-defform state indent-point))
+;;               ((integerp method)
+;;                (lisp-indent-specform method state
+;;                                      indent-point normal-indent))
+;;               (method
+;;                (funcall method indent-point state))))))))
 
 
 (defun noct-lispy-indent-setup ()
@@ -7716,25 +7716,20 @@ Lisp function does not specify a special indentation."
   (put 'cl-labels 'common-lisp-indent-function
        (get 'labels 'common-lisp-indent-function))
   ;; additional
-  (put 'cl-macrolet 'common-lisp-indent-function (get 'flet 'common-lisp-indent-function))
+  (put 'cl-macrolet 'common-lisp-indent-function
+       (get 'flet 'common-lisp-indent-function))
   (aggressive-indent-mode -1))
 
 (defun noct-elisp-indent-setup ()
-  (when (eq major-mode 'emacs-lisp-mode)
-    (cond ((when (buffer-file-name)
+  (when (and (eq major-mode 'emacs-lisp-mode)
+             (buffer-file-name)
              (string-match
               ".*lispy/"
               (file-name-directory (buffer-file-name))))
-           (noct-lispy-indent-setup))
+    (noct-lispy-indent-setup)))
 
-          (t
-           (setq-local lisp-indent-function #'fuco1/lisp-indent-function)
-           (put 'cl-macrolet 'lisp-indent-function
-                (get 'flet 'common-lisp-indent-function))
-           (put 'cl-macrolet 'fuco1/lisp-indent-function
-                (get 'flet 'common-lisp-indent-function))))))
-
-(general-add-hook '(find-file-hook emacs-lisp-mode-hook) #'noct-elisp-indent-setup)
+(general-add-hook '(find-file-hook emacs-lisp-mode-hook)
+                  #'noct-elisp-indent-setup)
 #+end_src
 
 *** Cl-lib Highlight
